few Changes as using Database postgresql

--- a/JobWebApp/src/main/resources/application.properties
+++ b/JobWebApp/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=JobWebApp
 spring.mvc.view.prefix = /view/
 spring.mvc.view.suffix = .jsp
+spring.datasource.url  = jdbc:postgresql://localhost:5432/demo
+spring.datasource.username = postgres
+spring.datasource.password = Adarsh@1127
+spring.datasource.driver-class-name = org.postgresql.Driver
